force-app/main/default/objects/Skill_Learning_Path__c/Skill_Learning_Path__c.object-meta.xml
<CustomObject>
    <label>Skill Qualification</label>
    <nameField>
        <displayFormat>SQ-{0000000}</displayFormat>
        <label>Skill Qualification</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Skill Qualifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>