force-app/main/default/objects/Skill_Learning_Path__c/fields/LearningTitle__c.field-meta.xml
<CustomField>
    <fullName>LearningTitle__c</fullName>
    <label>Learning Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>