force-app/main/default/objects/Skill_Learning_Path__c/fields/SkillCatalogue__c.field-meta.xml
<CustomField>
    <fullName>SkillCatalogue__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Catalogue</label>
    <referenceTo>Skills_Catalogue__c</referenceTo>
    <relationshipName>Skill_Learning_Path</relationshipName>
    <type>Lookup</type>
</CustomField>