force-app/main/default/objects/Skill_Learning_Path__c/fields/SkillRegistration__c.field-meta.xml
<CustomField>
    <fullName>SkillRegistration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Skill Registration</label>
    <referenceTo>Skill_Registration__c</referenceTo>
    <relationshipName>Skill_Learning_Path</relationshipName>
    <type>Lookup</type>
</CustomField>