force-app/main/default/objects/Skill_Learning_Path__c/fields/SNO__c.field-meta.xml
<CustomField>
    <fullName>SNO__c</fullName>
    <label>S.NO</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>