force-app/main/default/objects/Skill_Learning_Path__c/fields/Started_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Started_Date_Time__c</fullName>
    <label>Started Date/Time</label>
    <type>DateTime</type>
</CustomField>